# PR21.2

./: .gitignore  README.md  app.py  pyproject.toml  server.py
templates/: catalog.html  category.html  contacts.html  index.html
